Explicitly enable annotation processing
Up to JDK 22, `-proc:full` (annotation processing + compilation) was
the default.  From JDK 23 onward, the compiler uses `-proc:none` by
default.  We must now explicitly pass `-proc:full` to enable
annotation processing.